8352673: RISC-V: Vector can't be turned on with -XX:+UseRVV